--- a/Informe Final/Capitulos/Capitulo6/cap6sec4.tex
+++ b/Informe Final/Capitulos/Capitulo6/cap6sec4.tex
@@ -3,11 +3,12 @@
 		\begin{itemize}
 			\item  \textbf{Visual Studio Code:} es un editor de código fuente desarrollado por Microsoft para Windows, Linux y macOS. Incluye soporte para la depuración, control integrado de Git, resaltado de sintaxis, finalización inteligente de código, fragmentos y refactorización de código. También es personalizable, por lo que los usuarios pueden cambiar el tema del editor, los atajos de teclado y las preferencias. Es gratuito y de código abierto, aunque la descarga oficial está bajo software propietario. Se escogió esta herramienta por las numerosas ventajas que brinda en el momento de la programación. Además cuenta con una gran cantidad de extensiones muy útiles para el usuario.
 
-			\item \textbf{MySQL Workbench:} es el entorno integrado oficial de MySQL. Fue desarrollado por MySQL AB, y permite a los usuarios administrar gráficamente las bases de datos MySQL y diseñar visualmente las estructuras de las bases de datos. MySQL Workbench reemplaza el anterior paquete de software, MySQL GUI Tools. Similar a otros paquetes de terceros, pero aún considerado como el front end autorizado de MySQL, MySQL Workbench permite a los usuarios administrar el diseño y modelado de bases de datos, el desarrollo de SQL (reemplazando al MySQL Query Browser) y la administración de bases de datos (reemplazando al MySQL Administrator).
-
-			MySQL Workbench está disponible en dos ediciones, la habitual Edición Comunitaria gratuita y de código abierto que puede descargarse del sitio web de MySQL, y la Edición Estándar patentada que amplía y mejora el conjunto de características de la Edición Comunitaria. 
+			\item \textbf{MySQL Workbench:} es el entorno integrado oficial de MySQL. Fue desarrollado por MySQL AB, y permite a los usuarios administrar gráficamente las bases de datos MySQL y diseñar visualmente las estructuras de las bases de datos. 
 			
-			Se lo escogió por ser el cliente recomendado por MySQL para la gestión de la base de datos.
+			\paragraph\indent
+			MySQL Workbench reemplaza el anterior paquete de software, MySQL GUI Tools. Similar a otros paquetes de terceros, pero aún considerado como el front end autorizado de MySQL. Además, MySQL Workbench, permite a los usuarios administrar el diseño y modelado de bases de datos, el desarrollo de SQL (reemplazando al MySQL Query Browser) y la administración de bases de datos (reemplazando al MySQL Administrator).
+			\paragraph\indent
+			MySQL Workbench está disponible en dos ediciones, la habitual Edición Comunitaria gratuita y de código abierto que puede descargarse del sitio web de MySQL, y la Edición Estándar patentada que amplía y mejora el conjunto de características de la Edición Comunitaria. 
 			
 			\item \textbf{Git:} es un software de control de versiones diseñado por Linus Torvalds, pensando en la eficiencia y la confiabilidad del mantenimiento de versiones de aplicaciones cuando éstas tienen un gran número de archivos de código fuente. Su propósito es llevar registro de los cambios en archivos de computadora y coordinar el trabajo que varias personas realizan sobre archivos compartidos.
 				\begin{itemize}
@@ -19,5 +20,8 @@
 			
 			\item  \textbf{Compute Engine:} Es el IaaS (Infraestructura como servicio) de la plataforma de Google Cloud (GCP), en este servicio se pueden crear máquinas virtuales (instancias) de recursos personalizados (CPU, RAM, disco), su costo se factura por minuto de cada recurso. Se lo escogió por ser una tecnología de gran uso en la actualidad, además tener experiencia utilizando esta herramienta nos permite insertarnos de mejor manera en el mundo laboral.
 			\item \textbf{Firebase Hosting:} es un servicio de hosting de contenido web con nivel de producción orientado a desarrolladores. Con un solo comando, puedes implementar aplicaciones web y entregar contenido dinámico y estático en una CDN (red de distribución de contenidos) global rápidamente. También se puede sincronizar Firebase Hosting con Cloud Functions o Cloud Run para compilar y alojar microservicios en Firebase.
-					
+		
 		\end{itemize}
+
+		\paragraph\indent
+		Todas estas herramientas tuvimos la oportunidad de aprenderlas y usarlas en proyectos de alta complejidad que luego fueron certificadas internacionalmente en calidad de software durante la PPS.
