--- a/Informe Final/Capitulo8.tex
+++ b/Informe Final/Capitulo8.tex
@@ -3,40 +3,62 @@
 \markboth{CAPÍTULO \ref*{ch:capitulo8}. Conclusiones}{CAPÍTULO \ref*{ch:capitulo8}. Conclusiones}
 
 \section{Sobre el proyecto}
-\paragraph\indent
-En primera medida se desarrollo el proyecto cumpliendo con los objetivos propuestos incialmente. Se puso en práctica conocimientos incorporados en la carrera Ingeniería en Computación. Tammbien se logro aprender y profundizar acerca de nuevas herramientas necesarias para el desarrollo del proyecto y para una mejor formación profesional.
-% En primera medida desarrollamos el proyecto cumpliendo todos los objetivos que nos propusimos al momento de iniciar. Pudimos poner en práctica conocimientos incorporados en la carrera de Ingeniería en Computación. También pudimos aprender y profundizar acerca de nuevas herramientas y temáticas necesarias para el desarrollo de este proyecto, y para nuestra formación profesional.
+
+En primera medida se desarrolló el proyecto cumpliendo con los objetivos propuestos
+incialmente. Se pusieron en práctica conocimientos incorporados en la carrera Ingeniería en
+Computación, y sobre todo en la PPS. Tambien se logró aprender y profundizar acerca de nuevas herramientas
+necesarias para el desarrollo del proyecto y para una mejor formación profesional.
 
 \paragraph\indent
-El sistema permite llevar a cabo todo el proceso que se inicia con la presupuestación y finaliza con la entrega de los productos, involucrando la venta y fabricación de los mismos. De esta manera se consiguio optimizar los procesos que se llevan a cabo en la mueblería.
-% El sistema permite llevar a cabo todo el proceso que se inicia con la presupuestación y finaliza con la entrega de los productos, involucrando la venta y fabricación de los mismos. De esta manera conseguimos optimizar los procesos que se llevan a cabo en la mueblería.
+El sistema permite llevar a cabo todo el proceso que se inicia con la presupuestación y
+finaliza con la entrega de los productos, involucrando la venta y fabricación de los mismos. De
+esta manera se consiguieron optimizar los procesos que se llevan a cabo en la mueblería.
 
 \paragraph\indent
-El sistema permite generar y actualizar la lista de precios de forma automática, reduciendo los tiempos que tomaba generarlas y distribuirlas en todas las sucursales de la mueblería. Además otorga la posibilidad de conocer en tiempo real la disponibilidad de los productos en las distintas sucursales de la empresa.
+El sistema permite generar y actualizar la lista de precios de forma automática, reduciendo
+los tiempos que tomaba generarlas y distribuirlas en todas las sucursales de la mueblería. Además
+otorga la posibilidad de conocer en tiempo real la disponibilidad de los productos en las distintas
+sucursales de la empresa.
 
 \paragraph\indent
-Al usar tecnologías web, se consiguio que el sistema pueda ser ejecutado mediante cualquier navegador web de los sistemas operativos de mayor uso en la actualidad, Windows, Linux y MacOS.
-% Al usar tecnologías web, conseguimos que el sistema pueda ser ejecutado mediante cualquier navegador web de los sistemas operativos de mayor uso en la actualidad, Windows, Linux y MacOS.
+Al usar tecnologías web, se consiguió que el sistema pueda ser ejecutado mediante cualquier
+navegador web de los sistemas operativos de mayor uso en la actualidad, Windows, Linux y
+MacOS.
 
 \paragraph\indent
-La implementación del sistema permitirá llevar a cabo un estudio estadístico, mejorando la toma de decisiones de la mueblería. Además el sistema cuenta con la función de generar documentos de forma digital, reemplazando los manuscritos, con el objetivo de reducir el impacto ambiental y el tiempo para su elaboración.
+La implementación del sistema permitirá llevar a cabo un estudio estadístico, mejorando
+la toma de decisiones de la mueblería. Además el sistema cuenta con la función de generar
+documentos de forma digital, reemplazando los manuscritos, con el objetivo de reducir el impacto
+ambiental y el tiempo para su elaboración.
 
 \paragraph\indent
-La comunicación con los servidores de datos se encuentra cifrada utilizando protocolos modernos como ser HTTPS.
+La comunicación con los servidores de datos se encuentra cifrada utilizando protocolos
+modernos como ser HTTPS.
 
 \paragraph\indent
-En cuanto a las dificultades, una de las principales fue la instalación de los distintos servidores en entornos Cloud. Para ello se investigó, se tomaron cursos y se realizaron consultas a expertos en el área. Por otro lado, otro reto que se presentó fue el despliegue del sistema utilizando servicios CI/CD automatizado. Para resolver esta problemática se investigó y se realizaron diversas pruebas hasta lograr el objetivo. Por último el uso de lenguajes de programación modernos, sin conocimientos previos, obligó a realizar una capacitación en ellos.
+En cuanto a las dificultades, una de las principales fue la instalación de los distintos
+servidores en entornos Cloud. Para ello se investigó, se tomaron cursos y se realizaron consultas a
+expertos en el área. 
+
+\paragraph\indent
+Por otro lado, otro reto que se presentó fue el despliegue del sistema utilizando servicios CI/CD automatizado. Para resolver esta problemática se investigó y se realizaron diversas pruebas hasta lograr el objetivo. 
+
+\paragraph\indent
+Por último el uso de lenguajes de programación modernos, sin conocimientos previos, obligó a realizar una capacitación en ellos.
 
 \section{Personales}
 
 \paragraph\indent
-Desde el punto de vista personal, el desarrollo de este proyecto implicó diversos desafios que supimos atravesar con éxito. El trabajo en equipo, las largas discusiones sobre diseño, los errores cometidos, los aciertos y el trato con personas son algunos ejemplos
+Desde el punto de vista personal, el desarrollo de este proyecto implicó diversos desafios que supimos atravesar con éxito. El trabajo en equipo, las largas discusiones sobre diseño, los errores cometidos, los aciertos y el trato con personas son algunos ejemplos.
 
 \paragraph\indent
-Con el desarrollo de este proyecto nos enfrentamos a problemas reales, en donde tuvimos que tomar desiciones de diseño ingenieríl a fin de encontrar soluciones eficientes que resolviesen los requerimientos del cliente, asi como también, otros problemas que se nos presentaron. Durante este tiempo mejoramos el trabajo colaborativo, la forma en la que nos relacionamos e interactuamos con el cliente y también supimos diferenciar discusiones relacionadas al proyecto con nuestra relación personal como compañeros.
+Con el desarrollo de este proyecto nos enfrentamos a problemas reales, en donde tuvimos que tomar desiciones de diseño ingenieríl a fin de encontrar soluciones eficientes que resolviesen los requerimientos del cliente, asi como también, otros problemas que se nos presentaron. 
 
 \paragraph\indent
-Como autocrítica creemos que hemos fallado con la estimación del tiempo requerido para llevar un proyecto de la magnitud como el que hemos desarrollado. Sin embargo, estamos convencido que esto nos permitirá mejorar nuestras estimaciones para futuros proyectos.
+Durante este tiempo mejoramos el trabajo colaborativo, la forma en la que nos relacionamos e interactuamos con el cliente y también supimos diferenciar discusiones relacionadas al proyecto con nuestra relación personal como compañeros.
+
+\paragraph\indent
+Tuvimos la oportunidad de hacer nuestra PPS en una empresa que se dedica al desarrollo de software, participando en proyectos cuyos productos tuvieron certificación de calidad internacional. Pudimos aprender los procesos software, la forma de elaborar documentación para certificación, y aprender nuevas herramientas de desarrollo, las cuales fueron aplicadas al proyecto.
 
 \paragraph\indent
 Poder ver el sistema de gestión de la mueblería en funcionamiento nos llena de orgullo y nos inspira a seguir trabajando y formándonos en esta hermosa profesión que hemos elegido.
