--- a/Informe Final/Capitulo8.tex
+++ b/Informe Final/Capitulo8.tex
@@ -5,8 +5,8 @@
 \section{Sobre el proyecto}
 
 En primera medida se desarrolló el proyecto cumpliendo con los objetivos propuestos
-incialmente. Se pusieron en práctica conocimientos incorporados en la carrera Ingeniería en
-Computación, y sobre todo en la PPS. Tambien se logró aprender y profundizar acerca de nuevas herramientas
+inicialmente. Se pusieron en práctica conocimientos incorporados en la carrera Ingeniería en
+Computación, y sobre todo en la PPS. También se logró aprender y profundizar acerca de nuevas herramientas
 necesarias para el desarrollo del proyecto y para una mejor formación profesional.
 
 \paragraph\indent
@@ -49,10 +49,10 @@ Por último el uso de lenguajes de programación modernos, sin conocimientos pre
 \section{Personales}
 
 \paragraph\indent
-Desde el punto de vista personal, el desarrollo de este proyecto implicó diversos desafios que supimos atravesar con éxito. El trabajo en equipo, las largas discusiones sobre diseño, los errores cometidos, los aciertos y el trato con personas son algunos ejemplos.
+Desde el punto de vista personal, el desarrollo de este proyecto implicó diversos desafíos que supimos atravesar con éxito. El trabajo en equipo, las largas discusiones sobre diseño, los errores cometidos, los aciertos y el trato con personas son algunos ejemplos.
 
 \paragraph\indent
-Con el desarrollo de este proyecto nos enfrentamos a problemas reales, en donde tuvimos que tomar desiciones de diseño ingenieríl a fin de encontrar soluciones eficientes que resolviesen los requerimientos del cliente, asi como también, otros problemas que se nos presentaron. 
+Con el desarrollo de este proyecto nos enfrentamos a problemas reales, en donde tuvimos que tomar decisiones de diseño ingenieril a fin de encontrar soluciones eficientes que resolviesen los requerimientos del cliente, así como también, otros problemas que se nos presentaron. 
 
 \paragraph\indent
 Durante este tiempo mejoramos el trabajo colaborativo, la forma en la que nos relacionamos e interactuamos con el cliente y también supimos diferenciar discusiones relacionadas al proyecto con nuestra relación personal como compañeros.
