--- a/Informe Final/Capitulos/Capitulo6/cap6sec3.tex
+++ b/Informe Final/Capitulos/Capitulo6/cap6sec3.tex
@@ -6,7 +6,7 @@
 			
 			\item \textbf{Material Design:} es un concepto, una filosofía, unas pautas enfocadas al diseño utilizado en Android, pero también en la web y en cualquier plataforma.
 
-			\item \textbf{apiDoc:} libreria para generar documentación a partir de comentarios en una API.
+			\item \textbf{apiDoc:} librería para generar documentación a partir de comentarios en una API.
 			
 		\end{itemize}
 
