--- a/Informe Final/Capitulos/Capitulo7/cap7sec1.tex
+++ b/Informe Final/Capitulos/Capitulo7/cap7sec1.tex
@@ -24,8 +24,7 @@ Es un tipo de método de prueba que permite detectar errores internos del códig
 Con estas pruebas de pueden garantizar que se ejercitan por lo menos una vez todos los caminos independientes de cada módulo, que las decisiones lógicas se evalúan en sus variantes verdadera y falsa, que se ejecutan todos los bucles en sus límites operacionales y, por último, que se ejercitan las estructuras internas de datos para asegurar su validez.
 
 \paragraph\indent
-Para realizar este test se procedió primero a determinar el conjunto de datos representativos del dominio de la prueba, de manera tal que se
-se atraviesen todas las bifuraciones del código, decisiones y loop. 
+Para realizar este test se procedió primero a determinar el conjunto de datos representativos del dominio de la prueba, de manera tal que se atraviesen todas las bifurcaciones del código, decisiones y loop. 
 
 \paragraph\indent
 Se utilizó una herramienta para realizar tests automatizados que viene incorporado con Golang: el paquete test.
